Make the capitalization of menu items and tools consistent in the main window and layer popup UI.

--- a/src/ui/qgisapp.ui
+++ b/src/ui/qgisapp.ui
@@ -464,7 +464,7 @@
      <normaloff>:/images/themes/default/mActionComposerManager.png</normaloff>:/images/themes/default/mActionComposerManager.png</iconset>
    </property>
    <property name="text">
-    <string>Composer manager...</string>
+    <string>Composer Manager...</string>
    </property>
   </action>
   <action name="mActionExit">
@@ -551,7 +551,7 @@
      <normaloff>:/images/themes/default/mActionAddFeature.png</normaloff>:/images/themes/default/mActionAddFeature.png</iconset>
    </property>
    <property name="text">
-    <string>Add feature</string>
+    <string>Add Feature</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+.</string>
@@ -668,7 +668,7 @@
      <normaloff>:/images/themes/default/mActionMergeFeatures.png</normaloff>:/images/themes/default/mActionMergeFeatures.png</iconset>
    </property>
    <property name="text">
-    <string>Merge selected features</string>
+    <string>Merge Selected Features</string>
    </property>
   </action>
   <action name="mActionMergeFeatureAttributes">
@@ -677,7 +677,7 @@
      <normaloff>:/images/themes/default/mActionMergeFeatureAttributes.png</normaloff>:/images/themes/default/mActionMergeFeatureAttributes.png</iconset>
    </property>
    <property name="text">
-    <string>Merge attributes of selected features</string>
+    <string>Merge Attributes of Selected Features</string>
    </property>
   </action>
   <action name="mActionNodeTool">
@@ -760,7 +760,7 @@
      <normaloff>:/images/themes/default/mActionSelect.png</normaloff>:/images/themes/default/mActionSelect.png</iconset>
    </property>
    <property name="text">
-    <string>Select single feature</string>
+    <string>Select Single Feature</string>
    </property>
   </action>
   <action name="mActionSelectRectangle">
@@ -772,7 +772,7 @@
      <normaloff>:/images/themes/default/mActionSelectRectangle.png</normaloff>:/images/themes/default/mActionSelectRectangle.png</iconset>
    </property>
    <property name="text">
-    <string>Select features by rectangle</string>
+    <string>Select Features by Rectangle</string>
    </property>
   </action>
   <action name="mActionSelectPolygon">
@@ -784,7 +784,7 @@
      <normaloff>:/images/themes/default/mActionSelectPolygon.png</normaloff>:/images/themes/default/mActionSelectPolygon.png</iconset>
    </property>
    <property name="text">
-    <string>Select features by polygon</string>
+    <string>Select Features by Polygon</string>
    </property>
   </action>
   <action name="mActionSelectFreehand">
@@ -796,7 +796,7 @@
      <normaloff>:/images/themes/default/mActionSelectFreehand.png</normaloff>:/images/themes/default/mActionSelectFreehand.png</iconset>
    </property>
    <property name="text">
-    <string>Select features by freehand</string>
+    <string>Select Features by Freehand</string>
    </property>
   </action>
   <action name="mActionSelectRadius">
@@ -808,7 +808,7 @@
      <normaloff>:/images/themes/default/mActionSelectRadius.png</normaloff>:/images/themes/default/mActionSelectRadius.png</iconset>
    </property>
    <property name="text">
-    <string>Select features by radius</string>
+    <string>Select Features by Radius</string>
    </property>
   </action>
   <action name="mActionDeselectAll">
@@ -817,7 +817,7 @@
      <normaloff>:/images/themes/default/mActionDeselectAll.png</normaloff>:/images/themes/default/mActionDeselectAll.png</iconset>
    </property>
    <property name="text">
-    <string>Deselect features from all layers</string>
+    <string>Deselect Features from All Layers</string>
    </property>
   </action>
   <action name="mActionIdentify">
@@ -1012,7 +1012,7 @@
      <normaloff>:/images/themes/default/mActionFormAnnotation.png</normaloff>:/images/themes/default/mActionFormAnnotation.png</iconset>
    </property>
    <property name="text">
-    <string>Form annotation</string>
+    <string>Form Annotation</string>
    </property>
   </action>
   <action name="mActionAnnotation">
@@ -1095,7 +1095,7 @@
      <normaloff>:/images/themes/default/mActionAddLayer.png</normaloff>:/images/themes/default/mActionAddLayer.png</iconset>
    </property>
    <property name="text">
-    <string>Add PostGIS layers...</string>
+    <string>Add PostGIS Layers...</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+D</string>
@@ -1143,7 +1143,7 @@
      <normaloff>:/images/themes/default/mActionToggleEditing.png</normaloff>:/images/themes/default/mActionToggleEditing.png</iconset>
    </property>
    <property name="text">
-    <string>Toggle editing</string>
+    <string>Toggle Editing</string>
    </property>
    <property name="statusTip">
     <string>Toggles the editing state of the current layer</string>
@@ -1155,7 +1155,7 @@
      <normaloff>:/images/themes/default/mActionSaveEdits.png</normaloff>:/images/themes/default/mActionSaveEdits.png</iconset>
    </property>
    <property name="text">
-    <string>Save edits</string>
+    <string>Save Edits</string>
    </property>
    <property name="statusTip">
     <string>Save edits to current layer, but continue editing</string>
@@ -1163,12 +1163,12 @@
   </action>
   <action name="mActionLayerSaveAs">
    <property name="text">
-    <string>Save as...</string>
+    <string>Save As...</string>
    </property>
   </action>
   <action name="mActionLayerSelectionSaveAs">
    <property name="text">
-    <string>Save Selection as vector file...</string>
+    <string>Save Selection as Vector File...</string>
    </property>
   </action>
   <action name="mActionRemoveLayer">
@@ -1193,7 +1193,7 @@
   </action>
   <action name="mActionSetProjectCRSFromLayer">
    <property name="text">
-    <string>Set project CRS from layer</string>
+    <string>Set Project CRS from Layer</string>
    </property>
   </action>
   <action name="mActionTileScale">
@@ -1238,7 +1238,7 @@
      <normaloff>:/images/themes/default/mActionRemoveAllFromOverview.png</normaloff>:/images/themes/default/mActionRemoveAllFromOverview.png</iconset>
    </property>
    <property name="text">
-    <string>Remove All From Overview</string>
+    <string>Remove All from Overview</string>
    </property>
   </action>
   <action name="mActionShowAllLayers">
@@ -1436,7 +1436,7 @@
   </action>
   <action name="mActionStyleManagerV2">
    <property name="text">
-    <string>Style manager...</string>
+    <string>Style Manager...</string>
    </property>
   </action>
   <action name="mActionShowPythonDialog">
@@ -1453,7 +1453,7 @@
     <string>Full histogram stretch</string>
    </property>
    <property name="toolTip">
-    <string>Stretch histogram to full dataset</string>
+    <string>Stretch Histogram to Full Dataset</string>
    </property>
   </action>
   <action name="mActionAddLayerSeparator">
@@ -1492,7 +1492,7 @@
   </action>
   <action name="mActionEmbedLayers">
    <property name="text">
-    <string>Embed layers and groups...</string>
+    <string>Embed Layers and Groups...</string>
    </property>
    <property name="toolTip">
     <string>Embed layers and groups from other project files</string>
@@ -1558,7 +1558,7 @@
     <string>Feature Action</string>
    </property>
    <property name="toolTip">
-    <string>Run feature action</string>
+    <string>Run Feature Action</string>
    </property>
   </action>
   <action name="mActionPanToSelected">
@@ -1582,7 +1582,7 @@
      <normaloff>:/images/themes/default/mActionOffsetCurve.png</normaloff>:/images/themes/default/mActionOffsetCurve.png</iconset>
    </property>
    <property name="text">
-    <string>Offset curve</string>
+    <string>Offset Curve</string>
    </property>
   </action>
  </widget>
