[BACKPORT] Make the capitalization of menu items and tools consistent in the main window and layer popup UI.
Conflicts:

	src/app/legend/qgslegend.cpp
	src/ui/qgisapp.ui

--- a/src/ui/qgisapp.ui
+++ b/src/ui/qgisapp.ui
@@ -452,7 +452,7 @@
      <normaloff>:/images/themes/default/mActionComposerManager.png</normaloff>:/images/themes/default/mActionComposerManager.png</iconset>
    </property>
    <property name="text">
-    <string>Composer manager...</string>
+    <string>Composer Manager...</string>
    </property>
   </action>
   <action name="mActionExit">
@@ -686,7 +686,7 @@
      <normaloff>:/images/themes/default/mActionMergeFeatures.png</normaloff>:/images/themes/default/mActionMergeFeatures.png</iconset>
    </property>
    <property name="text">
-    <string>Merge selected features</string>
+    <string>Merge Selected Features</string>
    </property>
   </action>
   <action name="mActionMergeFeatureAttributes">
@@ -695,7 +695,7 @@
      <normaloff>:/images/themes/default/mActionMergeFeatureAttributes.png</normaloff>:/images/themes/default/mActionMergeFeatureAttributes.png</iconset>
    </property>
    <property name="text">
-    <string>Merge attributes of selected features</string>
+    <string>Merge Attributes of Selected Features</string>
    </property>
   </action>
   <action name="mActionNodeTool">
@@ -778,7 +778,7 @@
      <normaloff>:/images/themes/default/mActionSelect.png</normaloff>:/images/themes/default/mActionSelect.png</iconset>
    </property>
    <property name="text">
-    <string>Select single feature</string>
+    <string>Select Single Feature</string>
    </property>
   </action>
   <action name="mActionSelectRectangle">
@@ -790,7 +790,7 @@
      <normaloff>:/images/themes/default/mActionSelectRectangle.png</normaloff>:/images/themes/default/mActionSelectRectangle.png</iconset>
    </property>
    <property name="text">
-    <string>Select features by rectangle</string>
+    <string>Select Features by Rectangle</string>
    </property>
   </action>
   <action name="mActionSelectPolygon">
@@ -802,7 +802,7 @@
      <normaloff>:/images/themes/default/mActionSelectPolygon.png</normaloff>:/images/themes/default/mActionSelectPolygon.png</iconset>
    </property>
    <property name="text">
-    <string>Select features by polygon</string>
+    <string>Select Features by Polygon</string>
    </property>
   </action>
   <action name="mActionSelectFreehand">
@@ -814,7 +814,7 @@
      <normaloff>:/images/themes/default/mActionSelectFreehand.png</normaloff>:/images/themes/default/mActionSelectFreehand.png</iconset>
    </property>
    <property name="text">
-    <string>Select features by freehand</string>
+    <string>Select Features by Freehand</string>
    </property>
   </action>
   <action name="mActionSelectRadius">
@@ -826,7 +826,7 @@
      <normaloff>:/images/themes/default/mActionSelectRadius.png</normaloff>:/images/themes/default/mActionSelectRadius.png</iconset>
    </property>
    <property name="text">
-    <string>Select features by radius</string>
+    <string>Select Features by Radius</string>
    </property>
   </action>
   <action name="mActionDeselectAll">
@@ -835,7 +835,7 @@
      <normaloff>:/images/themes/default/mActionDeselectAll.png</normaloff>:/images/themes/default/mActionDeselectAll.png</iconset>
    </property>
    <property name="text">
-    <string>Deselect features from all layers</string>
+    <string>Deselect Features from All Layers</string>
    </property>
   </action>
   <action name="mActionIdentify">
@@ -1030,7 +1030,7 @@
      <normaloff>:/images/themes/default/mActionFormAnnotation.png</normaloff>:/images/themes/default/mActionFormAnnotation.png</iconset>
    </property>
    <property name="text">
-    <string>Form annotation</string>
+    <string>Form Annotation</string>
    </property>
   </action>
   <action name="mActionAnnotation">
@@ -1161,7 +1161,7 @@
      <normaloff>:/images/themes/default/mActionToggleEditing.png</normaloff>:/images/themes/default/mActionToggleEditing.png</iconset>
    </property>
    <property name="text">
-    <string>Toggle editing</string>
+    <string>Toggle Editing</string>
    </property>
    <property name="statusTip">
     <string>Toggles the editing state of the current layer</string>
@@ -1173,7 +1173,7 @@
      <normaloff>:/images/themes/default/mActionSaveEdits.png</normaloff>:/images/themes/default/mActionSaveEdits.png</iconset>
    </property>
    <property name="text">
-    <string>Save edits</string>
+    <string>Save Edits</string>
    </property>
    <property name="statusTip">
     <string>Save edits to current layer, but continue editing</string>
@@ -1181,12 +1181,12 @@
   </action>
   <action name="mActionLayerSaveAs">
    <property name="text">
-    <string>Save as...</string>
+    <string>Save As...</string>
    </property>
   </action>
   <action name="mActionLayerSelectionSaveAs">
    <property name="text">
-    <string>Save Selection as vector file...</string>
+    <string>Save Selection as Vector File...</string>
    </property>
   </action>
   <action name="mActionRemoveLayer">
@@ -1211,7 +1211,7 @@
   </action>
   <action name="mActionSetProjectCRSFromLayer">
    <property name="text">
-    <string>Set project CRS from layer</string>
+    <string>Set Project CRS from Layer</string>
    </property>
   </action>
   <action name="mActionTileScale">
@@ -1261,7 +1261,7 @@
      <normaloff>:/images/themes/default/mActionRemoveAllFromOverview.png</normaloff>:/images/themes/default/mActionRemoveAllFromOverview.png</iconset>
    </property>
    <property name="text">
-    <string>Remove All From Overview</string>
+    <string>Remove All from Overview</string>
    </property>
   </action>
   <action name="mActionShowAllLayers">
@@ -1459,7 +1459,7 @@
   </action>
   <action name="mActionStyleManagerV2">
    <property name="text">
-    <string>Style manager...</string>
+    <string>Style Manager...</string>
    </property>
   </action>
   <action name="mActionShowPythonDialog">
@@ -1476,7 +1476,7 @@
     <string>Full histogram stretch</string>
    </property>
    <property name="toolTip">
-    <string>Stretch histogram to full dataset</string>
+    <string>Stretch Histogram to Full Dataset</string>
    </property>
   </action>
   <action name="mActionAddLayerSeparator">
