--- a/src/plugins/heatmap/heatmapguibase.ui
+++ b/src/plugins/heatmap/heatmapguibase.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>428</width>
-    <height>254</height>
+    <width>430</width>
+    <height>435</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>430</width>
+    <height>470</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Heatmap Plugin</string>
@@ -37,60 +43,6 @@
    <item row="1" column="1">
     <widget class="QLineEdit" name="mOutputRasterLineEdit"/>
    </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="mFormatLabel">
-     <property name="text">
-      <string>Output Format</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1" colspan="2">
-    <widget class="QComboBox" name="mFormatCombo"/>
-   </item>
-   <item row="4" column="0" colspan="3">
-    <widget class="QGroupBox" name="mPointAttributeBox">
-     <property name="title">
-      <string>Heatmap Point Attributes</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
-       <widget class="QLabel" name="mBufferLabel">
-        <property name="text">
-         <string>Buffer Radius</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="mBufferLineEdit">
-        <property name="text">
-         <string>10</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="mDecayLabel">
-        <property name="text">
-         <string>Decay Ratio</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="mDecayLineEdit">
-        <property name="text">
-         <string>0.5</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="5" column="0" colspan="3">
-    <widget class="QDialogButtonBox" name="mButtonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="2">
     <widget class="QPushButton" name="mBrowseButton">
      <property name="focusPolicy">
@@ -104,6 +56,216 @@
      </property>
     </widget>
    </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="mFormatLabel">
+     <property name="text">
+      <string>Output Format</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1" colspan="2">
+    <widget class="QComboBox" name="mFormatCombo"/>
+   </item>
+   <item row="7" column="0" colspan="3">
+    <widget class="QGroupBox" name="advancedGroupBox">
+     <property name="title">
+      <string>Advanced Raster Options</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+     <widget class="QWidget" name="gridLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>391</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="advancedGrid">
+       <property name="sizeConstraint">
+        <enum>QLayout::SetFixedSize</enum>
+       </property>
+       <item row="0" column="0">
+        <widget class="QLabel" name="rowLabel">
+         <property name="text">
+          <string>Row</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="cellsizeXLabel">
+         <property name="text">
+          <string>Cell Size X</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QLabel" name="columnLabel">
+         <property name="text">
+          <string>Column</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2">
+        <widget class="QLabel" name="cellsizeYLabel">
+         <property name="text">
+          <string>Cell Size Y</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="rowLineEdit"/>
+       </item>
+       <item row="0" column="3">
+        <widget class="QLineEdit" name="columnLineEdit"/>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="cellXLineEdit"/>
+       </item>
+       <item row="1" column="3">
+        <widget class="QLineEdit" name="cellYLineEdit"/>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+   </item>
+   <item row="8" column="0" colspan="3">
+    <widget class="QDialogButtonBox" name="mButtonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0" colspan="3">
+    <widget class="QGroupBox" name="heatGroupBox">
+     <property name="title">
+      <string>Heat Effect Parameters</string>
+     </property>
+     <widget class="QWidget" name="gridLayoutWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>391</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="heatGrid">
+       <item row="1" column="0">
+        <widget class="QCheckBox" name="useWeight">
+         <property name="text">
+          <string>Use Weight from field</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="weightFieldCombo">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="mDecayLineEdit">
+         <property name="text">
+          <string>0.1</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="mDecayLabel">
+         <property name="text">
+          <string>Decay Ratio</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="3">
+    <widget class="QGroupBox" name="bufferGroupBox">
+     <property name="title">
+      <string>Buffer</string>
+     </property>
+     <widget class="QWidget" name="gridLayoutWidget_3">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>391</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="bufferGrid">
+       <item row="0" column="0">
+        <widget class="QLabel" name="radiusLabel">
+         <property name="text">
+          <string>Radius</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QCheckBox" name="useRadius">
+         <property name="text">
+          <string>Use Radius from field</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="mBufferLineEdit">
+         <property name="text">
+          <string>10</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QComboBox" name="radiusUnitCombo">
+         <item>
+          <property name="text">
+           <string>meters</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>map units</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="radiusFieldCombo">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2">
+        <widget class="QComboBox" name="radiusFieldUnitCombo">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <item>
+          <property name="text">
+           <string>meters</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>map units</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
@@ -115,8 +277,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>195</x>
-     <y>123</y>
+     <x>204</x>
+     <y>454</y>
     </hint>
     <hint type="destinationlabel">
      <x>199</x>
@@ -131,12 +293,92 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>195</x>
-     <y>123</y>
+     <x>204</x>
+     <y>454</y>
     </hint>
     <hint type="destinationlabel">
      <x>199</x>
      <y>79</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>useWeight</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>weightFieldCombo</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>99</x>
+     <y>183</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>297</x>
+     <y>183</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>useRadius</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>radiusFieldCombo</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>98</x>
+     <y>290</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>253</x>
+     <y>290</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>useRadius</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>radiusFieldUnitCombo</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>98</x>
+     <y>290</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>369</x>
+     <y>290</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>useRadius</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>mBufferLineEdit</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>98</x>
+     <y>292</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>247</x>
+     <y>253</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>useRadius</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>radiusUnitCombo</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>98</x>
+     <y>292</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>363</x>
+     <y>253</y>
     </hint>
    </hints>
   </connection>
