--- a/src/plugins/heatmap/heatmapguibase.ui
+++ b/src/plugins/heatmap/heatmapguibase.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>430</width>
-    <height>435</height>
+    <height>380</height>
    </rect>
   </property>
   <property name="maximumSize">
    <size>
     <width>430</width>
-    <height>470</height>
+    <height>380</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -66,10 +66,65 @@
    <item row="3" column="1" colspan="2">
     <widget class="QComboBox" name="mFormatCombo"/>
    </item>
-   <item row="7" column="0" colspan="3">
+   <item row="9" column="0" colspan="3">
+    <widget class="QDialogButtonBox" name="mButtonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="mRadiusLabel">
+     <property name="text">
+      <string>Radius</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QLineEdit" name="mBufferLineEdit">
+     <property name="text">
+      <string>10</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="2">
+    <widget class="QComboBox" name="mRadiusUnitCombo">
+     <item>
+      <property name="text">
+       <string>meters</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>map units</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="mDecayLabel">
+     <property name="text">
+      <string>Decay Ratio</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1" colspan="2">
+    <widget class="QLineEdit" name="mDecayLineEdit">
+     <property name="text">
+      <string>0.1</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0" colspan="3">
     <widget class="QGroupBox" name="advancedGroupBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="title">
-      <string>Advanced Raster Options</string>
+      <string>Advanced</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -95,12 +150,18 @@
          <property name="text">
           <string>Row</string>
          </property>
+         <property name="buddy">
+          <cstring>rowLineEdit</cstring>
+         </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="cellsizeXLabel">
          <property name="text">
           <string>Cell Size X</string>
+         </property>
+         <property name="buddy">
+          <cstring>cellXLineEdit</cstring>
          </property>
         </widget>
        </item>
@@ -109,6 +170,9 @@
          <property name="text">
           <string>Column</string>
          </property>
+         <property name="buddy">
+          <cstring>columnLineEdit</cstring>
+         </property>
         </widget>
        </item>
        <item row="1" column="2">
@@ -116,13 +180,20 @@
          <property name="text">
           <string>Cell Size Y</string>
          </property>
+         <property name="buddy">
+          <cstring>cellYLineEdit</cstring>
+         </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QLineEdit" name="rowLineEdit"/>
        </item>
        <item row="0" column="3">
-        <widget class="QLineEdit" name="columnLineEdit"/>
+        <widget class="QLineEdit" name="columnLineEdit">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="1" column="1">
         <widget class="QLineEdit" name="cellXLineEdit"/>
@@ -132,85 +203,17 @@
        </item>
       </layout>
      </widget>
-    </widget>
-   </item>
-   <item row="8" column="0" colspan="3">
-    <widget class="QDialogButtonBox" name="mButtonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0" colspan="3">
-    <widget class="QGroupBox" name="heatGroupBox">
-     <property name="title">
-      <string>Heat Effect Parameters</string>
-     </property>
-     <widget class="QWidget" name="gridLayoutWidget_2">
+     <widget class="QWidget" name="gridLayoutWidget_4">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>20</y>
+        <y>90</y>
         <width>391</width>
         <height>61</height>
        </rect>
       </property>
-      <layout class="QGridLayout" name="heatGrid">
-       <item row="1" column="0">
-        <widget class="QCheckBox" name="useWeight">
-         <property name="text">
-          <string>Use Weight from field</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QComboBox" name="weightFieldCombo">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLineEdit" name="mDecayLineEdit">
-         <property name="text">
-          <string>0.1</string>
-         </property>
-        </widget>
-       </item>
+      <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
-        <widget class="QLabel" name="mDecayLabel">
-         <property name="text">
-          <string>Decay Ratio</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="3">
-    <widget class="QGroupBox" name="bufferGroupBox">
-     <property name="title">
-      <string>Buffer</string>
-     </property>
-     <widget class="QWidget" name="gridLayoutWidget_3">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>20</y>
-        <width>391</width>
-        <height>61</height>
-       </rect>
-      </property>
-      <layout class="QGridLayout" name="bufferGrid">
-       <item row="0" column="0">
-        <widget class="QLabel" name="radiusLabel">
-         <property name="text">
-          <string>Radius</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
         <widget class="QCheckBox" name="useRadius">
          <property name="text">
           <string>Use Radius from field</string>
@@ -218,34 +221,13 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QLineEdit" name="mBufferLineEdit">
-         <property name="text">
-          <string>10</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="2">
-        <widget class="QComboBox" name="radiusUnitCombo">
-         <item>
-          <property name="text">
-           <string>meters</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>map units</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="1" column="1">
         <widget class="QComboBox" name="radiusFieldCombo">
          <property name="enabled">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="1" column="2">
+       <item row="0" column="2">
         <widget class="QComboBox" name="radiusFieldUnitCombo">
          <property name="enabled">
           <bool>false</bool>
@@ -260,6 +242,20 @@
            <string>map units</string>
           </property>
          </item>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QCheckBox" name="useWeight">
+         <property name="text">
+          <string>Use Weight from field</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" colspan="2">
+        <widget class="QComboBox" name="weightFieldCombo">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
         </widget>
        </item>
       </layout>
@@ -277,8 +273,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>204</x>
-     <y>454</y>
+     <x>213</x>
+     <y>370</y>
     </hint>
     <hint type="destinationlabel">
      <x>199</x>
@@ -293,8 +289,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>204</x>
-     <y>454</y>
+     <x>213</x>
+     <y>370</y>
     </hint>
     <hint type="destinationlabel">
      <x>199</x>
@@ -309,12 +305,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>99</x>
-     <y>183</y>
+     <x>109</x>
+     <y>315</y>
     </hint>
     <hint type="destinationlabel">
-     <x>297</x>
-     <y>183</y>
+     <x>408</x>
+     <y>318</y>
     </hint>
    </hints>
   </connection>
@@ -325,12 +321,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>98</x>
-     <y>290</y>
+     <x>108</x>
+     <y>283</y>
     </hint>
     <hint type="destinationlabel">
-     <x>253</x>
-     <y>290</y>
+     <x>294</x>
+     <y>286</y>
     </hint>
    </hints>
   </connection>
@@ -341,12 +337,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>98</x>
-     <y>290</y>
+     <x>108</x>
+     <y>283</y>
     </hint>
     <hint type="destinationlabel">
-     <x>369</x>
-     <y>290</y>
+     <x>408</x>
+     <y>286</y>
     </hint>
    </hints>
   </connection>
@@ -357,28 +353,28 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>98</x>
-     <y>292</y>
+     <x>108</x>
+     <y>283</y>
     </hint>
     <hint type="destinationlabel">
-     <x>247</x>
-     <y>253</y>
+     <x>325</x>
+     <y>131</y>
     </hint>
    </hints>
   </connection>
   <connection>
    <sender>useRadius</sender>
    <signal>toggled(bool)</signal>
-   <receiver>radiusUnitCombo</receiver>
+   <receiver>mRadiusUnitCombo</receiver>
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>98</x>
-     <y>292</y>
+     <x>108</x>
+     <y>283</y>
     </hint>
     <hint type="destinationlabel">
-     <x>363</x>
-     <y>253</y>
+     <x>420</x>
+     <y>131</y>
     </hint>
    </hints>
   </connection>
