--- a/src/plugins/heatmap/heatmapguibase.ui
+++ b/src/plugins/heatmap/heatmapguibase.ui
@@ -189,11 +189,7 @@
         <widget class="QLineEdit" name="rowLineEdit"/>
        </item>
        <item row="0" column="3">
-        <widget class="QLineEdit" name="columnLineEdit">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-        </widget>
+         <widget class="QLineEdit" name="columnLineEdit"/>
        </item>
        <item row="1" column="1">
         <widget class="QLineEdit" name="cellXLineEdit"/>
@@ -375,6 +371,22 @@
     <hint type="destinationlabel">
      <x>420</x>
      <y>131</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>useRadius</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>mRadiusLabel</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>83</x>
+     <y>275</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>58</x>
+     <y>116</y>
     </hint>
    </hints>
   </connection>
