Revert last four accidental commits: backport wmts support: 50ba9929afaf470e9417b4779e85835648f022cc WMTS/WMS updates: 84959cb891348fa498a3eadd4b4b464dbd7f5901 missed a dialog: 4b5d2652adda3f411a37691effc435b3cbdce53a. [FEATURE] WMTS: 2130b02c20ed66095f448cb16a4e9ec2459da9e7

--- a/src/ui/qgisapp.ui
+++ b/src/ui/qgisapp.ui
@@ -119,6 +119,7 @@
     <addaction name="mActionNewBookmark"/>
     <addaction name="mActionShowBookmarks"/>
     <addaction name="mActionDraw"/>
+    <addaction name="mActionTileScale"/>
     <addaction name="mActionGpsTool"/>
    </widget>
    <widget class="QMenu" name="mLayerMenu">
@@ -1211,6 +1212,11 @@
   <action name="mActionSetProjectCRSFromLayer">
    <property name="text">
     <string>Set Project CRS from Layer</string>
+   </property>
+  </action>
+  <action name="mActionTileScale">
+   <property name="text">
+    <string>Tile scale slider</string>
    </property>
   </action>
   <action name="mActionGpsTool">
