--- a/src/ui/qgswmssourceselectbase.ui
+++ b/src/ui/qgswmssourceselectbase.ui
@@ -326,27 +326,22 @@
          </attribute>
          <column>
           <property name="text">
-           <string>Layer</string>
+           <string>Layers</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Styles</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Size</string>
           </property>
          </column>
          <column>
           <property name="text">
            <string>Format</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>Style</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>Title</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>Tileset</string>
           </property>
          </column>
          <column>
