--- a/src/ui/qgsfieldspropertiesbase.ui
+++ b/src/ui/qgsfieldspropertiesbase.ui
@@ -145,7 +145,7 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="1">
+            <item row="2" column="0" colspan="2">
              <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -208,6 +208,17 @@
                 </widget>
                </item>
                <item>
+                <widget class="QToolButton" name="mRemoveTabGroupItemButton">
+                 <property name="text">
+                  <string>-</string>
+                 </property>
+                 <property name="icon">
+                  <iconset resource="../../images/images.qrc">
+                   <normaloff>:/images/themes/default/mActionSignMinus.png</normaloff>:/images/themes/default/mActionSignMinus.png</iconset>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <widget class="QToolButton" name="mAddItemButton">
                  <property name="text">
                   <string>&gt;</string>
@@ -215,17 +226,6 @@
                  <property name="icon">
                   <iconset resource="../../images/images.qrc">
                    <normaloff>:/images/themes/default/mActionArrowRight.png</normaloff>:/images/themes/default/mActionArrowRight.png</iconset>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QToolButton" name="mMoveDownItem">
-                 <property name="text">
-                  <string>v</string>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="../../images/images.qrc">
-                   <normaloff>:/images/themes/default/mActionArrowDown.png</normaloff>:/images/themes/default/mActionArrowDown.png</iconset>
                  </property>
                 </widget>
                </item>
@@ -241,13 +241,13 @@
                 </widget>
                </item>
                <item>
-                <widget class="QToolButton" name="mRemoveTabGroupItemButton">
+                <widget class="QToolButton" name="mMoveDownItem">
                  <property name="text">
-                  <string>-</string>
+                  <string>v</string>
                  </property>
                  <property name="icon">
                   <iconset resource="../../images/images.qrc">
-                   <normaloff>:/images/themes/default/mActionSignMinus.png</normaloff>:/images/themes/default/mActionSignMinus.png</iconset>
+                   <normaloff>:/images/themes/default/mActionArrowDown.png</normaloff>:/images/themes/default/mActionArrowDown.png</iconset>
                  </property>
                 </widget>
                </item>
